<resources>
    <string name="version_name" translatable="false">1.3.0</string>
    <string name="rate_title">Rate Anglers\' Log</string>
    <string name="app_name" translatable="false">Anglers\' Log</string>
    <string name="app_description">Track, analyze, share.</string>
    <string name="app_photos_dir" translatable="false">AnglersLog</string>
    <string name="hashtag" translatable="false">AnglersLogApp</string>
    <string name="website" translatable="false">https://anglerslog.ca/</string>
    <string name="share_text">Shared with @anglerslog for #android #anglerslogapp</string>
    <string name="rate_msg">Please take a minute to rate Anglers\' Log.  All feedback is greatly appreciated!</string>
    <string name="rate_positive">Rate</string>
    <string name="rate_negative">No thanks</string>
    <string name="rate_neutral">Later</string>
    <string name="feedback_sheet_title">Bugs &amp; Suggestions</string>
    <string name="feedback_sheet_description">Visit the Settings menu to make a feature suggestion, give feedback, or report a bug.</string>
    <string name="backup_sheet_title">Backup</string>
    <string name="backup_sheet_description">Be sure to periodically export Anglers\' Log to ensure no data is lost. Visit the Settings menu to learn more.</string>
    <string name="pref_units" translatable="false">pref_units</string>
    <string name="pref_privacy_policy" translatable="false">pref_privacy_policy</string>
    <string name="pref_about_group" translatable="false">pref_about_group</string>
    <string name="pref_google_maps_terms" translatable="false">pref_google_maps_terms</string>
    <string name="pref_icons8_terms" translatable="false">pref_icons8_terms</string>
    <string name="pref_version" translatable="false">pref_version</string>
    <string name="pref_feedback" translatable="false">pref_feedback</string>
    <string name="pref_import" translatable="false">pref_import</string>
    <string name="pref_export" translatable="false">pref_export</string>
    <string name="pref_reset" translatable="false">pref_reset</string>
    <string name="privacy_policy_url" translatable="false">https://anglerslog.ca/privacy/privacy-policy.html</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="google_maps_terms_title">Google Maps Terms &amp; Privacy</string>
    <string name="icons8_terms_title">Icons8 Terms &amp; Privacy</string>
    <string name="icons8_terms">Some icons used in Anglers\' Log were developed by <a href="https://icons8.com/">Icons8</a>.\n\nIcons8 provides thousands of free icons for both personal and commercial use.</string>
    <string name="default_bait_category_lure">Lure</string>
    <string name="default_bait_category_minnow">Minnow</string>
    <string name="default_bait_category_fly">Fly</string>
    <string name="default_species_steelhead">Steelhead</string>
    <string name="default_species_pike">Pike</string>
    <string name="default_species_bass">Bass - Smallmouth</string>
    <string name="default_species_salmon">Salmon - Coho</string>
    <string name="default_fishing_method_boat">Boat</string>
    <string name="default_fishing_method_shore">Shore</string>
    <string name="default_fishing_method_ice">Ice</string>
    <string name="default_fishing_method_trolling">Trolling</string>
    <string name="default_water_clarity_crystal">Crystal</string>
    <string name="default_water_clarity_clear">Clear</string>
    <string name="default_water_clarity_muddy">Muddy</string>
    <string name="default_color_silver">Silver</string>
    <string name="default_color_blue">Blue Chrome</string>
    <string name="display_units">Display Units</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="about_setting">About, Terms &amp; Privacy</string>
    <string name="version">Version</string>
    <string name="feedback_name">Bugs &amp; Suggestions</string>
    <string name="feedback_summary">Send feedback, suggest a feature, or report a bug.</string>
    <string name="feedback_chooser_title">Send feedback via</string>
    <string name="feedback_no_email">No email client found on device</string>
    <string name="import_name">Import</string>
    <string name="import_summary">Transfer data from another device platform.</string>
    <string name="import_title">Confirm Import</string>
    <string name="import_dialog_message">Importing new data will erase current data and may take several minutes.</string>
    <string name="import_success">Import successful</string>
    <string name="export">Export</string>
    <string name="export_summary">Save data to be transferred to a new device platform.</string>
    <string name="export_title">Confirm Export</string>
    <string name="export_dialog_message">Exporting data will not affect current data, but may take several minutes.</string>
    <string name="export_success">Export successful</string>
    <string name="export_error">Export Error</string>
    <string name="reset_logbook">Reset Logbook</string>
    <string name="reset_summary">Erase all existing Anglers\' Log data.</string>
    <string name="reset_dialog_message">Resetting Anglers\' Log will delete all existing data and revert Anglers\' Log to its default settings. This cannot be undone.</string>
    <string name="reset_success">Reset successful</string>
    <string name="reset_dialog_title">Confirm Reset</string>
    <string name="error">Error</string>
    <string name="species_caught">Species Caught</string>
    <string name="species_stats">Species Statistics</string>
    <string name="species">Species</string>
    <string name="catch_string">Catch</string>
    <string name="catches_on_trip">fish caught on this trip</string>
    <string name="longest_catch">Longest Catch</string>
    <string name="heaviest_catch">Heaviest Catch</string>
    <string name="longest_catches">Longest Catches</string>
    <string name="heaviest_catches">Heaviest Catches</string>
    <string name="bait">Bait</string>
    <string name="baits_used">Baits Used</string>
    <string name="bait_stats">Bait Statistics</string>
    <string name="clarity">Clarity</string>
    <string name="trip">Trip</string>
    <string name="anglers">Anglers</string>
    <string name="water_clarity">Water Clarity</string>
    <string name="fishing_method">Fishing Method</string>
    <string name="angler">angler</string>
    <string name="water_depth">Water Depth</string>
    <string name="water_temperature">Water Temperature</string>
    <string name="water_depth_units">Water Depth (%s)</string>
    <string name="water_temperature_units">Water Temperature (%s)</string>
    <string name="methods">Fishing Methods</string>
    <string name="result">Result</string>
    <string name="notes">Notes</string>
    <string name="quantity">Quantity</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="depth">Depth</string>
    <string name="length_units">Length (%s)</string>
    <string name="weight_units">Weight (%s)</string>
    <string name="depth_units">Depth (%s)</string>
    <string name="bait_category">Bait Category</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="artificial">Artificial</string>
    <string name="live">Live</string>
    <string name="real">Real</string>
    <string name="released">Released</string>
    <string name="kept">Kept</string>
    <string name="location">Location</string>
    <string name="location_success">Location Catches</string>
    <string name="location_stats">Location Statistics</string>
    <string name="fishing_spot">Fishing Spot</string>
    <string name="fishing_spots">Fishing Spots</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="lat">Lat</string>
    <string name="lng">Lng</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="sky_conditions">Sky Conditions</string>
    <string name="mph">mph</string>
    <string name="kmh">km/h</string>
    <string name="degrees_f" translatable="false">\u00b0F</string>
    <string name="degrees_c" translatable="false">\u00b0C</string>
    <string name="lbs">lbs</string>
    <string name="inches" translatable="false">\"</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="ft">ft</string>
    <string name="meters">m</string>
    <string name="zero" translatable="false">0</string>
    <string name="one" translatable="false">1</string>
    <string name="to">to</string>
    <string name="show_more">Show more</string>
    <string name="all">All</string>
    <string name="show_catches">Show catches</string>
    <string name="show_all_catches">Show all catches</string>
    <string name="all_catches">All catches</string>
    <string name="all_locations">All locations</string>
    <string name="all_baits">All baits</string>
    <string name="reset">Reset</string>
    <string name="search">Search %s</string>
    <string name="empty" translatable="false"> </string>
    <string name="favorite">Favorite</string>
    <string name="sort_by">Sort by</string>
    <string name="number_of_catches">Number of catches</string>
    <string name="number_of_fishing_spots">Number of fishing spots</string>
    <string name="newest_to_oldest">Newest to oldest</string>
    <string name="oldest_to_newest">Oldest to newest</string>
    <string name="locations_lowercase">locations</string>
    <string name="add_photo">Add photo</string>
    <string name="add_photos">Add photos</string>
    <string name="add_species">Add species</string>
    <string name="add_location">Add location</string>
    <string name="add_bait">Add bait</string>
    <string name="add_fishing_method">Add fishing method</string>
    <string name="add_water_clarity">Add water clarity</string>
    <string name="add_note">Add note</string>
    <string name="add_name">Add name</string>
    <string name="add_description">Add description</string>
    <string name="add_bait_category">Add bait category</string>
    <string name="add_catches">Add catches</string>
    <string name="add_locations">Add locations</string>
    <string name="add_fishing_spot">Add fishing spot</string>
    <string name="add_anglers">Add anglers</string>
    <string name="add_weather">Add weather</string>
    <string name="update_weather">Update weather</string>
    <string name="dismiss">Dismiss</string>
    <string name="attach_photos">Attach photos</string>
    <string name="attach_photo">Attach photo</string>
    <string name="take_photo">Take photo</string>
    <string name="map_no_spots">There are no locations to show.</string>
    <string name="map_no_search">There are no locations to search</string>
    <string name="drawer_catches">Catches</string>
    <string name="drawer_trips">Trips</string>
    <string name="drawer_gallery">Photo Gallery</string>
    <string name="drawer_locations">Locations</string>
    <string name="temperature_hint">Enter a temperature</string>
    <string name="quantity_hint">Enter a quantity</string>
    <string name="length_hint">Enter a length</string>
    <string name="weight_hint">Enter a weight</string>
    <string name="depth_hint">Enter a depth</string>
    <string name="sky_hint">ex. Cloudy</string>
    <string name="header_photo_description">A photo of one of the user\'s catches.</string>
    <string name="crosshairs_description">The coordinates of the current fishing spot.</string>
    <string name="refresh_description">Attempts to get weather data from the web.</string>
    <string name="icon_description">An icon that shows the current item.</string>
</resources>